[gd_scene load_steps=11 format=3 uid="uid://cj4a3tga7bs7s"]

[ext_resource type="Script" uid="uid://mcq6v1f631cq" path="res://Scene/UI/HUDManager.gd" id="1_dwlh0"]
[ext_resource type="Texture2D" uid="uid://dl5472lncicgl" path="res://Assets/Image/yellow-star.png" id="2_arsb1"]
[ext_resource type="Texture2D" uid="uid://jw52ffre2tql" path="res://Assets/Image/Clipboard1.png" id="3_rqe3p"]

[sub_resource type="LabelSettings" id="LabelSettings_2bdd2"]
font_size = 50
outline_size = 25
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_5lw76"]
font_size = 50
outline_size = 25
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_xln6g"]
font_size = 50
outline_size = 25
outline_color = Color(0.0013668863, 0.0019815615, 0.002158034, 1)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_msam1"]
particle_flag_disable_z = true
emission_shape_offset = Vector3(0, 1, 0)
initial_velocity_min = 400.0
initial_velocity_max = 400.0
gravity = Vector3(0, 0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_dwlh0"]
font_size = 25
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_arsb1"]
font_size = 25
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_rqe3p"]
font_size = 25
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[node name="HUD" type="Control" node_paths=PackedStringArray("label_counter_area", "label_cabinet_area")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
script = ExtResource("1_dwlh0")
label_counter_area = NodePath("TextureRect/CheckListContainer/LabelCounterArea")
label_cabinet_area = NodePath("TextureRect/CheckListContainer/LabelCabinetArea")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -867.0
offset_bottom = 287.0
grow_horizontal = 0
mouse_filter = 2

[node name="PickupTip" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Click Left Mouse Button to Pick Up "
label_settings = SubResource("LabelSettings_2bdd2")

[node name="PlaceTip" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Click Left Mouse Button to Place "
label_settings = SubResource("LabelSettings_5lw76")

[node name="RotateTip" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Hold Right Mouse Button to Rotate  
Press G Key to Flip"
label_settings = SubResource("LabelSettings_xln6g")

[node name="ScreenStars" type="GPUParticles2D" parent="."]
position = Vector2(965, 540)
emitting = false
amount = 10
texture = ExtResource("2_arsb1")
one_shot = true
process_material = SubResource("ParticleProcessMaterial_msam1")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_top = -2.0
offset_right = 470.0
offset_bottom = 299.0
texture = ExtResource("3_rqe3p")
expand_mode = 1

[node name="CheckListContainer" type="VBoxContainer" parent="TextureRect"]
layout_mode = 1
offset_left = 32.0
offset_top = 55.0
offset_right = 124.0
offset_bottom = 197.0
mouse_filter = 2

[node name="LabelCounterArea" type="Label" parent="TextureRect/CheckListContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_dwlh0")

[node name="LabelCabinetArea" type="Label" parent="TextureRect/CheckListContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_arsb1")

[node name="LabelZoneArea" type="Label" parent="TextureRect/CheckListContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_rqe3p")
